# aifw

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md
aifw/: CMakeLists.txt
aifw/autograd/: accumulate_grad.hpp  autograd_meta.hpp  edge.hpp  engine.hpp  grad_mode.hpp  node.hpp
aifw/core/: CMakeLists.txt  assert.hpp  contracts.hpp
aifw/core/backend/: backend.hpp  cpu_backend.hpp
aifw/core/device/: cpu_allocator.hpp  cpu_device.hpp  device.hpp  device_registry.hpp  iallocator.hpp  idevice.hpp  ikernel_registry.hpp
aifw/core/ops/: broadcast.hpp  cpu_kernel_registry.cpp  cpu_kernel_registry.hpp  dispatch.hpp  host_accessor.hpp  kernel_registry.hpp  ops.hpp  ops_elementwise.hpp  ops_linear.hpp  ops_reduction.hpp  ops_unary.hpp
aifw/core/runtime/: device_registry.hpp
aifw/core/runtime/cpu/: cpu_allocator.hpp  cpu_device.hpp  cpu_kernel_registry.cpp  cpu_kernel_registry.hpp
aifw/core/tensor/: dtype.hpp  shape.hpp  storage.hpp  stride.hpp  tensor.hpp  tensor_factory.hpp  tensor_iterator.hpp  tensor_view.hpp
benchmarks/: CMakeLists.txt
benchmarks/framework/: bench.hpp
benchmarks/ops/: bench_matmul.cpp  main.cpp
tests/: CMakeLists.txt
tests/device/: main.cpp  test_device.cpp
tests/framework/: test.hpp
tests/ops/: test_broadcast.cpp  test_ops.cpp  test_reduction.cpp
tests/tensor/: test_dtype.cpp  test_host_accessor.cpp  test_shape.cpp  test_stride.cpp  test_tensor.cpp  test_tensor_factory.cpp  test_tensor_iterator.cpp  test_tensor_views.cpp
